# my-postgres-macros

./: .gitignore  Cargo.toml  README.md
.github/flows/: test.yml
src/: e_tag.rs  generate_e_tag_methods.rs  get_field_value.rs  lib.rs  postgre_enum_ext.rs  postgres_enum_ext.rs  postgres_struct_ext.rs  postgres_utils.rs  render_field_value.rs  struct_name.rs
src/db_enum/: fn_as_numbered_str.rs  fn_from_db_row.rs  fn_to_sql_value.rs  generate.rs  generate_as_string.rs  generate_as_string_with_model.rs  generate_with_model.rs  mod.rs  utils.rs
src/db_schema/: generate.rs
src/fn_impl_bukl_insert/: fn_bulk_insert.rs  mod.rs
src/fn_impl_bulk_delete/: fn_bulk_delete.rs  generate.rs  mod.rs
src/fn_impl_bulk_insert/: fn_bulk_insert.rs  generate.rs
src/fn_impl_bulk_insert_or_update/: fn_bulk_insert_or_update.rs  generate.rs  mod.rs
src/fn_impl_bulk_select/: fn_from_db_row.rs  fn_select_line_no.rs  generate.rs  mod.rs
src/fn_impl_bulk_select_input_data/: fn_get_param_value.rs  fn_where_line.rs  generate.rs  mod.rs
src/fn_impl_delete/: fn_delete.rs  mod.rs  (+1 more)
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
tests/src/dto/: bulk_insert_cases.rs  mod.rs  test_auto_generated_types_with_operator.rs  test_auto_generated_types_with_range.rs  test_basic_cases.rs  test_e_tag.rs  test_json_field.rs  test_json_hashmap_dto.rs  test_primary_key.rs  where_model.rs
tests/src/dto/e_tag_tests/: mod.rs  test_e_tag_generator.rs
tests/src/dto/enum_as_update_case/: mod.rs  test_basic_cases_with_enum_as_number.rs  test_basic_cases_with_enum_as_string.rs  test_basic_cases_with_enum_with_model.rs
tests/src/dto/enum_as_where_case/: mod.rs  test_basic_cases_with_enum_as_number.rs  test_basic_cases_with_enum_as_string.rs  test_where_with_empty_struct.rs  where_with_lifetime.rs  where_with_limit_only.rs
tests/src/dto/enum_generator_tests/: mod.rs  test_enum_as_i16.rs  test_enum_as_i32.rs  test_enum_as_i8.rs  test_enum_as_str.rs  test_enum_as_u16.rs  test_enum_as_u32.rs  test_enum_as_u8.rs
tests/src/dto/table_schema_tests/: basic_tests.rs
tests/src/dto/tests_real_cases/: case_with_model.rs  mod.rs
(+60 files in other folders)
