[package]
name = "my-postgres-macros"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macros-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/macros-utils.git" }
types-reader = { tag = "0.1.0", git = "https://github.com/MyJetTools/types-reader.git" }

syn = { version = "*", features = ["extra-traits"] }
quote = "*"
