[package]
name = "my-postgres-macros"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
types-reader = { branch = "main", git = "https://github.com/MyJetTools/types-reader.git" }

syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
